--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "clsx": "^2.1.1",
     "expo": "~52.0.33",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screen": "^1.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
